methods.slug.SlugTracking.scala.error
Compilation error:
SlugTracking:10: error: ';' expected but 'else' found.
                               else {return false}}
                               ^